Weird border bug

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,12 @@ body {
 	height: 100%;
 }
 
+/* HACK */
+* {
+	border-style: solid;
+	border-width: 0;
+}
+
 .translate-center {
 	transform: translate(-50%, -50%);
 }
